WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56228
Assertion failure (type == event.type()) after a web process crash
https://bugs.webkit.org/show_bug.cgi?id=56228
Summary
Assertion failure (type == event.type()) after a web process crash
Alexey Proskuryakov
Reported
2011-03-11 15:01:12 PST
Created
attachment 85542
[details]
random crashing I'm sometimes seeing this assertion fail after the web process crashes. It's fairly reproducible when I make printing related calls randomly crash the web process, and try to print something. Attached is a patch I made to test crashing.
Attachments
random crashing
(1.67 KB, patch)
2011-03-11 15:01 PST
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
proposed fix
(1.39 KB, patch)
2011-03-30 11:52 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
updated Radar#
(1.39 KB, patch)
2011-03-30 11:53 PDT
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-03-11 15:01:29 PST
<
rdar://problem/9123780
>
Alexey Proskuryakov
Comment 2
2011-03-30 11:52:15 PDT
Created
attachment 87586
[details]
proposed fix
Alexey Proskuryakov
Comment 3
2011-03-30 11:53:32 PDT
Created
attachment 87587
[details]
updated Radar#
Alexey Proskuryakov
Comment 4
2011-04-01 10:25:44 PDT
Committed <
http://trac.webkit.org/changeset/82692
>.
WebKit Review Bot
Comment 5
2011-04-01 11:23:47 PDT
http://trac.webkit.org/changeset/82692
might have broken GTK Linux 32-bit Release The following tests are not passing: fast/dom/HTMLMeterElement/meter-boundary-values.html fast/dom/HTMLMeterElement/meter-element.html fast/dom/HTMLMeterElement/meter-optimums.html fast/dom/HTMLMeterElement/meter-styles-changing-pseudo.html fast/dom/HTMLMeterElement/meter-styles.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug