third_party/WebKit/Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -2602,6 +2602,9 @@ void WebPageProxy::processDidCrash()
 
     m_pageClient->processDidCrash();
     m_loaderClient.processDidCrash(this);
+
+    // Can't expect DidReceiveEvent notifications from a crashed web process.
+    m_keyEventQueue.clear();
 }
 
 WebPageCreationParameters WebPageProxy::creationParameters() const
